@@ -16,13 +16,21 @@ package m19_io_nio.practice;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.List;
 
 public class Task04 {
     public static void main(String[] args) {
-        Path src = Path.of("source.txt");
-        Path dest = Path.of("destination.txt");
-        // Ваш код здесь
+
+        try{
+            Path path = Paths.get("java-course","m19_io_nio","practice","report2.txt");
+            Path path2 = Paths.get("java-course","m19_io_nio","practice","report22.txt");
+            Files.write(path, List.of("Milk", "Hleb", "Eggs"));
+            Files.copy(path,path2, StandardCopyOption.REPLACE_EXISTING);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
     }
 }
